# blog-harness

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  Makefile  README.ko.md  README.md  handoff.md  pyproject.toml
.claude/skills/ce-compound/: SKILL.md  THIRD-PARTY-NOTICES.md
.claude/skills/ce-compound/scripts/: validate-doc-claims.py
.claude/skills/ce-compound/scripts/session-history/: extract-metadata.py
diagrams/dsa/: dp_longest_path.gif.html
docs/solutions/tooling-decisions/: vendor-ce-compound-learning-skill.md
drafts/: dynamic-programming.md  greedy.md  searxng.md
factcheck/: dynamic-programming.log.md  greedy.log.md  searxng.log.md
guides/: RULES.md  callouts.md  categories.md  diagram-system.md  tags.md  thumbnails.md  writing.md
guides/diagram-patterns/: arrowhead.md  before-after.md  chart.md  composite.md  flow.md  flowchart.md  graph.md  sequence.md  set.md  skeleton-layer.md  structure.md  tree.md
posts/: dynamic-programming.md  greedy.md  searxng.md
src/blog_harness/: __init__.py  convert_callouts.py  factcheck.py  lint_post.py  lint_svg.py  thumbnail_check.py  thumbnail_prompt.py
tests/: test_convert_callouts.py  test_factcheck.py  test_lint_post.py  test_lint_svg.py  test_smoke.py  test_thumbnail_check.py  test_thumbnail_prompt.py
